@@ -1,47 +1,58 @@
 package com.example.demo.controller;
 
 import com.example.demo.dto.SomeDto;
-import com.example.demo.entity.PdfDocument;
 import com.example.demo.entity.PdfPage;
 import com.example.demo.entity.ViewQuestion;
 import com.example.demo.service.FileStorageService;
+import com.example.demo.service.OssService;
 import com.example.demo.service.PdfPageService;
 import com.example.demo.service.ViewQuestionService;
+import com.example.demo.utils.OssPathUtils;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.imageio.ImageIO;
+import javax.servlet.http.HttpServletResponse;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
+import java.io.InputStream;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.*;
+import java.util.Base64;
 
 @RestController
 @RequestMapping("/api/pdf-pages")
 @CrossOrigin(origins = "http://localhost:5173")
 
 public class PdfPageController {
-
+    @Autowired
+    private OssService ossService;
+    @Autowired
+    private OssPathUtils ossPathUtils;
     @Autowired
     private PdfPageService pdfPageService;
     @Autowired
     private FileStorageService fileStorageService;
     @Autowired
     private ViewQuestionService viewQuestionService;
+    @Autowired
+    private ObjectMapper objectMapper;
 
     /**
      * 获取所有分页数据
@@ -53,29 +64,33 @@ public class PdfPageController {
     }
 
     @GetMapping("/image/{id}")
-    public ResponseEntity<Resource> getImage(@PathVariable Long id) throws IOException {
+    public ResponseEntity<Void> getImage(@PathVariable Long id, HttpServletResponse response) throws IOException {
         Optional<PdfPage> pageOpt = pdfPageService.getPageById(id);
         if (!pageOpt.isPresent()) {
-            return ResponseEntity.notFound().build();
+            response.setStatus(HttpStatus.NOT_FOUND.value());
+            return null;
         }
 
         String imagePath = pageOpt.get().getBookPath();
-
-        // 打印路径信息
         System.out.println("尝试加载图片路径：" + imagePath);
 
+        // 如果是 OSS URL，直接重定向
+        if (imagePath.startsWith("http://") || imagePath.startsWith("https://")) {
+            response.sendRedirect(imagePath);
+            return null;
+        }
+
+        // 否则按本地文件处理
         Path path = Paths.get(imagePath);
         Resource resource = new UrlResource(path.toUri());
-
         if (resource.exists() && resource.isReadable()) {
-            return ResponseEntity.ok()
-                    .contentType(MediaType.IMAGE_PNG)
-                    .body(resource);
+            response.setContentType("image/png");
+            IOUtils.copy(resource.getInputStream(), response.getOutputStream());
         } else {
-            // 再次打印错误路径
             System.err.println("文件不存在或不可读：" + imagePath);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+            response.setStatus(HttpStatus.NOT_FOUND.value());
         }
+        return null;
     }
 
     @GetMapping("/images/{id}")
@@ -97,6 +112,7 @@ public class PdfPageController {
             return ResponseEntity.notFound().build();
         }
     }
+
     /**
      * 根据 ID 获取单个分页
      */
@@ -129,57 +145,51 @@ public class PdfPageController {
             @RequestParam int width,
             @RequestParam int height,
             @RequestParam Long imageId,
-            @RequestParam Integer order) {
+            @RequestParam Integer order,
+            @RequestParam String ossPath) {
 
         Optional<PdfPage> pageOpt = pdfPageService.getPageById(imageId);
         if (!pageOpt.isPresent()) {
-            //Map<String, String> error = Collections.singletonMap("error", "未找到原图");
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         }
 
-        String imagePath = pageOpt.get().getBookPath(); // 获取真实文件路径
+        String localImagePath = pageOpt.get().getBookPath();
+        BufferedImage originalImage = null;
 
         try {
-            BufferedImage originalImage = ImageIO.read(new File(imagePath));
-            if (originalImage == null) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body(Collections.singletonMap("error", "无法读取原始图像"));
-            }
+                if (localImagePath.startsWith("http://") || localImagePath.startsWith("https://")) {
+                    // OSS图片，使用URL流读取
+                    try (InputStream in = new URL(localImagePath).openStream()) {
+                        originalImage = ImageIO.read(in);
+                    }
+                } else {
+                    // 本地图片
+                    originalImage = ImageIO.read(new File(localImagePath));
+                }
+                if (originalImage == null) {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                            .body(Collections.singletonMap("error", "无法读取原始图像"));
+                }
 
-            // 获取目标目录结构
-            File imageFile = new File(imagePath);
-            File pageDir = imageFile.getParentFile(); // D:\pdf\45778985\page
-            File isbnDir = pageDir.getParentFile();   // D:\pdf\45778985
-
-            // 构建目标目录：D:\pdf\45778985\question
-            File questionDir = new File(isbnDir, "question");
-            // 自动创建目录（如果不存在）
-            if (!questionDir.exists()) {
-                questionDir.mkdirs();
-            }
-
-            String targetSubDirName = imageFile.getName().split("\\.")[0];
-            File targetSubDir = new File(questionDir, targetSubDirName);
-            if (!targetSubDir.exists()) {
-                targetSubDir.mkdirs();
-            }
-
-            // 使用当前页内的顺序编号命名
-            String fileName = order + ".png";
-            String outputPath = new File(targetSubDir, fileName).getPath();
+            // 获取 ISBN
+//            String isbn = pageOpt.get().getISBN();
+//            String pages = pageOpt.get().getBookPage();
+//            String fileName = order + ".png";
+//            // OSS 路径 /pdf/{isbn}/page/question/{pages}/{order}.png
+//            String ossPath = ossPathUtils.buildQuestionPath(isbn, pages + "/" + fileName);
 
             // 执行裁剪
             BufferedImage croppedImage = originalImage.getSubimage(x, y, width, height);
-            ImageIO.write(croppedImage, "png", new File(outputPath));
+            File tempFile = Files.createTempFile("cropped-", ".png").toFile();
+            ImageIO.write(croppedImage, "png", tempFile);
 
-
-            String imageUrl = "http://localhost:8080/api/pdf-pages/image?path=" + outputPath;
+            String imageUrl = ossService.uploadFile(tempFile.getAbsolutePath(), ossPath);
+            tempFile.delete();
 
             Map<String, String> response = new HashMap<>();
             response.put("message", "Image cropped and saved successfully!");
             response.put("croppedImagePath", imageUrl);
             return ResponseEntity.ok(response);
-
         } catch (IOException e) {
             Map<String, String> error = Collections.singletonMap("error", "裁剪失败：" + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
@@ -187,16 +197,10 @@ public class PdfPageController {
     }
 
     @GetMapping("/image")
-    public ResponseEntity<Resource> getCroppedImage(@RequestParam String path) throws IOException {
-        Path imagePath = Paths.get(path);
-        Resource resource = new UrlResource(imagePath.toUri());
-
-        if (resource.exists() && resource.isReadable()) {
-            return ResponseEntity.ok()
-                    .contentType(MediaType.IMAGE_PNG)
-                    .body(resource);
-        } else {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+    public void getImage(@RequestParam String url, HttpServletResponse response) throws IOException {
+        try (InputStream in = new URL(url).openStream()) {
+            response.setContentType("image/png"); // 或根据实际类型设置
+            IOUtils.copy(in, response.getOutputStream());
         }
     }
 
@@ -219,10 +223,18 @@ public class PdfPageController {
         try {
             List<BufferedImage> bufferedImages = new ArrayList<>();
             for (String path : paths) {
-                BufferedImage image = ImageIO.read(new File(new URI(path).getPath()));
-                if (image != null) {
-                    bufferedImages.add(image);
+                BufferedImage image;
+                if (path.startsWith("http://") || path.startsWith("https://")) {
+                    try (InputStream in = new URL(path).openStream()) {
+                        image = ImageIO.read(in);
+                    }
+                } else {
+                    image = ImageIO.read(new File(path));
                 }
+                if (image == null) {
+                    throw new IOException("无法读取图片: " + path);
+                }
+                bufferedImages.add(image);
             }
 
             if (bufferedImages.isEmpty()) {
@@ -242,19 +254,17 @@ public class PdfPageController {
             }
             g2d.dispose();
 
-            String outputDir = "cropped_images";
-            File outputDirectory = new File(outputDir);
-            if (!outputDirectory.exists()) {
-                outputDirectory.mkdirs();
-            }
+            // 保存合并图片到本地临时文件
+            File tempFile = Files.createTempFile("merged-", ".png").toFile();
+            ImageIO.write(combinedImage, "png", tempFile);
 
-            String fileName = "merged_" + System.currentTimeMillis() + ".png";
-            String outputPath = outputDir + File.separator + fileName;
-
-            ImageIO.write(combinedImage, "png", new File(outputPath));
+            // 上传到 OSS，路径可根据业务自定义
+            String ossPath = "pdf/merged/merged_" + System.currentTimeMillis() + ".png";
+            String ossUrl = ossService.uploadFile(tempFile.getAbsolutePath(), ossPath);
+            tempFile.delete();
 
             Map<String, String> result = new HashMap<>();
-            result.put("mergedImageUrl", "http://localhost:8080/api/pdf-pages/image?path=" + outputPath);
+            result.put("mergedImageUrl", ossUrl);
 
             return ResponseEntity.ok(result);
 
@@ -265,107 +275,153 @@ public class PdfPageController {
     }
 
     @PostMapping("/merge-cropped-images")
-    public ResponseEntity<Map<String, String>>mergeCroppedImages(
-            @RequestBody Map<String, Object> payload) {
+    public ResponseEntity<Map<String, String>> mergeCroppedImages(@RequestBody Map<String, Object> payload) {
+        if (payload.containsKey("images")) {
+            List<String> imageBase64List = (List<String>) payload.get("images");
+            String selectedImageId = (String) payload.get("selectedImageId");
+            Integer order = (Integer) payload.get("order");
 
-        List<String> imageBase64List = (List<String>) payload.get("images");
-        Integer baseNameIndex = (Integer) payload.get("baseName");
-        String selectedImageId = (String) payload.get("selectedImageId"); // 从请求体中获取 selectedImageId
-        Integer order = (Integer) payload.get("order");  // 新增字段
-
-        if (imageBase64List == null || imageBase64List.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Collections.singletonMap("error", "没有图片数据"));
-        }
-
-        try {
-            List<BufferedImage> bufferedImages = new ArrayList<>();
-            for (String base64 : imageBase64List) {
-                String base64Data = base64.replaceFirst("^data:image/.+;base64,", "");
-                byte[] decodedBytes = Base64.getDecoder().decode(base64Data);
-                BufferedImage image = ImageIO.read(new ByteArrayInputStream(decodedBytes));
-                if (image != null) {
-                    bufferedImages.add(image);
-                } else {
-                    System.err.println("Failed to decode image from base64" );
+            if (imageBase64List == null || imageBase64List.isEmpty()) {
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                        .body(Collections.singletonMap("error", "没有图片数据"));
+            }
+            try {
+                List<BufferedImage> bufferedImages = new ArrayList<>();
+                for (String base64 : imageBase64List) {
+                    String base64Data = base64.replaceFirst("^data:image/.+;base64,", "");
+                    byte[] decodedBytes = Base64.getDecoder().decode(base64Data);
+                    BufferedImage image = ImageIO.read(new ByteArrayInputStream(decodedBytes));
+                    if (image != null) {
+                        bufferedImages.add(image);
+                    }
                 }
+                Optional<PdfPage> pageOpt = pdfPageService.getPageById(Long.valueOf(selectedImageId));
+                if (!pageOpt.isPresent()) {
+                    return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonMap("error", "未找到原图"));
+                }
+                PdfPage pdfPage = pageOpt.get();
+
+                String isbn = pdfPage.getISBN();
+                String pages = pdfPage.getBookPage();
+                // 合并图片
+                int totalHeight = bufferedImages.stream().mapToInt(BufferedImage::getHeight).sum();
+                int maxWidth = bufferedImages.stream().mapToInt(BufferedImage::getWidth).max().orElse(0);
+                BufferedImage combinedImage = new BufferedImage(maxWidth, totalHeight, BufferedImage.TYPE_INT_ARGB);
+                Graphics2D g2d = combinedImage.createGraphics();
+                int y = 0;
+                for (BufferedImage img : bufferedImages) {
+                    g2d.drawImage(img, 0, y, null);
+                    y += img.getHeight();
+                }
+                g2d.dispose();
+
+                // 1. 先上传到 zc 目录
+                String fileName = pages + "_" + order + ".png";
+                String zcPath = ossPathUtils.buildZcPath(isbn, fileName); // /pdf/{isbn}/page/zc/{pages}_{order}.png
+                File tempFile = Files.createTempFile("merged-", ".png").toFile();
+                ImageIO.write(combinedImage, "png", tempFile);
+                String zcUrl = ossService.uploadFile(tempFile.getAbsolutePath(), zcPath);
+
+                // 2. 再复制一份到 question 目录
+                //String ossPath = payload.get("path");
+               /* String name = payload.get("name") != null ? payload.get("name").toString() : (order != null ? order.toString(): "1");
+                String questionPath = ossPathUtils.buildQuestionPath(isbn, pages + "/" + name+".png"); // /pdf/{isbn}/page/question/{pages}/{order}.png
+                File tempCopy = File.createTempFile("copy-", ".png");
+                try (InputStream in = new URL(zcUrl).openStream()) {
+                    Files.copy(in, tempCopy.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                }
+                String questionUrl = ossService.uploadFile(tempCopy.getAbsolutePath(), questionPath);
+                tempCopy.delete();
+                tempFile.delete();*/
+
+                // 返回 question 目录下的路径
+                return ResponseEntity.ok(Collections.singletonMap("outputPath", zcUrl));
+            } catch (Exception e) {
+                e.printStackTrace();
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                        .body(Collections.singletonMap("error", "合并失败：" + e.getMessage()));
             }
-
-            Optional<PdfPage> pageOpt = pdfPageService.getPageById(Long.valueOf(selectedImageId));
-            if (!pageOpt.isPresent()) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonMap("error", "未找到原图"));
-            }
-
-            PdfPage pdfPage = pageOpt.get();
-            String isbn = pdfPage.getISBN();
-
-            String tempMergedDir = "zc"; // 定义 tempMergedDir 变量
-            // 获取原始图片路径，用于确定输出目录
-
-            File questionDir = new File("D:/pdf/" + isbn + "/question");
-            File zcDir = new File(questionDir, "zc");
-
-            if (!zcDir.exists()) {
-                zcDir.mkdirs();
-            }
-
-            // 使用新的 mergeAndSaveImages 方法，并传入 order 参数
-            String outputPath = fileStorageService.mergeAndSaveImages(bufferedImages, zcDir.getAbsolutePath(), "merged", order);
-
-
-            return ResponseEntity.ok(Collections.singletonMap("outputPath", outputPath));
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", "合并失败：" + e.getMessage()));
         }
+        if (payload.containsKey("srcPath") && payload.containsKey("destPath")) {
+            String srcPath = (String) payload.get("srcPath");
+            String destPath = (String) payload.get("destPath");
+            try {
+                // 下载 srcPath 到本地临时文件
+                File tempFile = File.createTempFile("oss_copy_", ".png");
+                try (InputStream in = new URL(srcPath).openStream()) {
+                    Files.copy(in, tempFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                }
+                // 上传到 OSS 新路径
+                String ossUrl = ossService.uploadFile(tempFile.getAbsolutePath(), destPath);
+                tempFile.delete();
+                return ResponseEntity.ok(Collections.singletonMap("outputPath", ossUrl));
+            } catch (Exception e) {
+                e.printStackTrace();
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                        .body(Collections.singletonMap("error", "复制合并图失败：" + e.getMessage()));
+            }
+        }
+        // 参数不对
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(Collections.singletonMap("error", "参数错误"));
     }
+
     @PostMapping("/some-path")
     public ResponseEntity<?> someMethod(@RequestBody SomeDto dto) {
         System.out.println("Received data: " + dto.getField1() + ", " + dto.getField2());
         return ResponseEntity.ok().build();
     }
 
+
     @RequestMapping(value = "/clear-temp-merged", method = {RequestMethod.DELETE, RequestMethod.POST})
     public ResponseEntity<String> clearTempMergedFolder(@RequestParam String isbn) {
-        Path zcPath = Paths.get("D:/pdf", isbn, "question", "zc"); // 可以改为动态路径拼接
-        if (Files.exists(zcPath)) {
-            try {
-                Files.walk(zcPath)
-                        .sorted(Comparator.reverseOrder())
-                        .forEach(path -> {
-                            try {
-                                Files.delete(path);
-                            } catch (IOException e) {
-                                e.printStackTrace();
-                            }
-                        });
-                return ResponseEntity.ok("临时合并图已删除");
-            } catch (IOException e) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body("删除失败：" + e.getMessage());
+        try {
+            // 删除OSS上的zc文件夹
+            String zcOssPath = "pdf/" + isbn + "/page/zc/";
+            boolean deleted = ossService.deleteFolder(zcOssPath);
+            
+            if (deleted) {
+                return ResponseEntity.ok("OSS临时合并图已删除");
+            } else {
+                return ResponseEntity.ok("无OSS临时合并图可删除");
             }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("删除OSS临时文件夹失败：" + e.getMessage());
         }
-        return ResponseEntity.ok("无临时合并图可删除");
     }
+
     @PostMapping("/copy-file")
     public ResponseEntity<Map<String, String>> copyFile(@RequestBody Map<String, String> payload) {
         String srcPath = payload.get("srcPath");
         String destPath = payload.get("destPath");
 
         try {
-            Path source = Paths.get(srcPath);
+            Path source;
+            File tempFile = null;
+            if (srcPath.startsWith("http://") || srcPath.startsWith("https://")) {
+                tempFile = File.createTempFile("oss_download_", ".png");
+                try (InputStream in = new URL(srcPath).openStream()) {
+                    Files.copy(in, tempFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                }
+                source = tempFile.toPath();
+            } else {
+                source = Paths.get(srcPath);
+            }
+
             Path destination = Paths.get(destPath);
 
             if (!Files.exists(source)) {
+                if (tempFile != null) tempFile.delete();
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
                         .body(Collections.singletonMap("error", "源文件不存在"));
             }
 
             Files.createDirectories(destination.getParent());
-
             Files.copy(source, destination, StandardCopyOption.REPLACE_EXISTING);
+
+            if (tempFile != null) tempFile.delete();
 
             return ResponseEntity.ok(Collections.singletonMap("message", "文件复制成功"));
 
@@ -375,6 +431,7 @@ public class PdfPageController {
                     .body(Collections.singletonMap("error", "复制失败：" + e.getMessage()));
         }
     }
+
     @PostMapping("/create-dir")
     public ResponseEntity<Map<String, String>> createDir(@RequestParam String dir) {
         try {
@@ -388,6 +445,7 @@ public class PdfPageController {
                     .body(Collections.singletonMap("error", "创建目录失败：" + e.getMessage()));
         }
     }
+
     @PostMapping("/view-question")
     public ResponseEntity<Void> saveView(@RequestBody Map<String, Object> payload) {
         try {
@@ -395,7 +453,7 @@ public class PdfPageController {
             String pages = (String) payload.get("pages");
             int pageNum = Integer.parseInt(pages.replaceAll("\\D+", ""));
             String name = String.valueOf(payload.get("name"));
-            name = name+".png";
+            name = name + ".png";
             int questionNumber;
             Object questionObj = payload.get("question_number");
             if (questionObj instanceof Integer) {
@@ -414,6 +472,36 @@ public class PdfPageController {
             view.setName(name);
             view.setQuestionNumber(questionNumber);
             view.setPath(path);
+
+            // 设置新增字段
+            if (payload.containsKey("file")) {
+                view.setFile((String) payload.get("file"));
+            }
+            if (payload.containsKey("grade")) {
+                view.setGrade((String) payload.get("grade"));
+            } else {
+                // 自动补全 grade 字段
+                Optional<PdfPage> pageOpt = pdfPageService.getPageByISBNAndPage(isbn, pages);
+                if (pageOpt.isPresent()) {
+                    view.setGrade(pageOpt.get().getGrade());
+                }
+            }
+            if (payload.containsKey("subject")) {
+                view.setSubject((String) payload.get("subject"));
+            }
+            if (payload.containsKey("points")) {
+                Object pointsObj = payload.get("points");
+                if (pointsObj != null) {
+                    if (pointsObj instanceof Integer) {
+                        view.setPoints((Integer) pointsObj);
+                    } else if (pointsObj instanceof String) {
+                        view.setPoints(Integer.parseInt((String) pointsObj));
+                    }
+                }
+            }
+            if (payload.containsKey("topic")) {
+                view.setTopic((String) payload.get("topic"));
+            }
 
             viewQuestionService.save(view);
 
@@ -451,13 +539,20 @@ public class PdfPageController {
     @GetMapping("/question-image")
     public ResponseEntity<Resource> getQuestionImage(@RequestParam String path) {
         try {
-            Path imagePath = Paths.get(path);
-            Resource resource = new UrlResource(imagePath.toUri());
-            
+            Resource resource;
+            if (path.startsWith("http://") || path.startsWith("https://")) {
+                // 网络图片
+                resource = new UrlResource(path);
+            } else {
+                // 本地图片
+                Path imagePath = Paths.get(path);
+                resource = new UrlResource(imagePath.toUri());
+            }
+
             if (resource.exists() && resource.isReadable()) {
                 return ResponseEntity.ok()
-                    .contentType(MediaType.IMAGE_PNG)
-                    .body(resource);
+                        .contentType(MediaType.IMAGE_PNG)
+                        .body(resource);
             } else {
                 return ResponseEntity.notFound().build();
             }
@@ -466,6 +561,7 @@ public class PdfPageController {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
+
     @PostMapping("/import-questions")
     public ResponseEntity<String> importQuestions(
             @RequestParam String isbn,
@@ -474,19 +570,19 @@ public class PdfPageController {
         // 处理逻辑
         return ResponseEntity.ok("Imported questions successfully");
     }
-    
+
     @PutMapping("/update-question")
     public ResponseEntity<Void> updateQuestion(@RequestBody Map<String, Object> payload) {
         try {
             Long id = Long.valueOf(String.valueOf(payload.get("id")));
             Optional<ViewQuestion> questionOpt = viewQuestionService.findById(id);
-            
+
             if (!questionOpt.isPresent()) {
                 return ResponseEntity.notFound().build();
             }
-            
+
             ViewQuestion question = questionOpt.get();
-            
+
             // 更新字段
             if (payload.containsKey("question_number")) {
                 Object questionNumberObj = payload.get("question_number");
@@ -496,29 +592,144 @@ public class PdfPageController {
                     question.setQuestionNumber(Integer.parseInt((String) questionNumberObj));
                 }
             }
-            
+
             if (payload.containsKey("answer")) {
                 question.setAnswer((String) payload.get("answer"));
             }
-            
+
             if (payload.containsKey("analysis")) {
                 question.setAnalysis((String) payload.get("analysis"));
             }
-            
+
             if (payload.containsKey("knowledge")) {
                 question.setKnowledge((String) payload.get("knowledge"));
             }
-            
+
             if (payload.containsKey("merge_graph")) {
                 question.setMergeGraph((String) payload.get("merge_graph"));
             }
-            
+
+            // 更新新增字段
+            if (payload.containsKey("file")) {
+                question.setFile((String) payload.get("file"));
+            }
+            if (payload.containsKey("grade")) {
+                question.setGrade((String) payload.get("grade"));
+            }
+            if (payload.containsKey("subject")) {
+                question.setSubject((String) payload.get("subject"));
+            }
+            if (payload.containsKey("points")) {
+                Object pointsObj = payload.get("points");
+                if (pointsObj != null) {
+                    if (pointsObj instanceof Integer) {
+                        question.setPoints((Integer) pointsObj);
+                    } else if (pointsObj instanceof String) {
+                        question.setPoints(Integer.parseInt((String) pointsObj));
+                    }
+                }
+            }
+            if (payload.containsKey("topic")) {
+                question.setTopic((String) payload.get("topic"));
+            }
+
             viewQuestionService.save(question);
-            
+
             return ResponseEntity.ok().build();
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+
+    @PostMapping("/workflow-detail")
+    public ResponseEntity<Map<String, Object>> workflowDetail(@RequestBody Map<String, Object> payload) {
+        try {
+            Long questionId = Long.valueOf(payload.get("id").toString());
+            Optional<ViewQuestion> questionOpt = viewQuestionService.findById(questionId);
+            if (!questionOpt.isPresent()) {
+                return ResponseEntity.notFound().build();
+            }
+            ViewQuestion question = questionOpt.get();
+
+            // 构造工作流输入
+            Map<String, Object> parameters = new HashMap<>();
+            parameters.put("file", question.getPath());
+            parameters.put("grade", question.getGrade());
+            parameters.put("subject", question.getSubject());
+
+            // 构造请求体
+            Map<String, Object> body = new HashMap<>();
+            body.put("workflow_id", "7509392015203205131");
+            body.put("parameters", parameters);
+
+            // 调用 Coze 工作流
+            HttpHeaders headers = new HttpHeaders();
+            headers.set("Authorization", "Bearer pat_IGe7yBZIbmrjXA88Oh6OvYwPZZ8JSBFm5yDTuCyPp3JUCMTpI3NHUsOjW5ufr8KD");
+            headers.setContentType(MediaType.APPLICATION_JSON);
+
+            HttpEntity<Map<String, Object>> entity = new HttpEntity<>(body, headers);
+            RestTemplate restTemplate = new RestTemplate();
+            // ResponseEntity<Map> response = restTemplate.postForEntity("https://api.coze.cn/v1/workflow/run", entity, Map.class);
+
+            // 解析输出并写回数据库
+            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
+                    "https://api.coze.cn/v1/workflow/run",
+                    HttpMethod.POST,
+                    entity,
+                    new ParameterizedTypeReference<Map<String, Object>>() {
+                    }
+            );
+
+            Map<String, Object> bodys = response.getBody();
+
+            if (bodys != null) {
+                Object dataObj = bodys.get("data");
+                if (dataObj instanceof String) {
+                    try {
+                        // 将字符串反序列化为 Map
+                        @SuppressWarnings("unchecked")
+                        Map<String, Object> result = objectMapper.readValue((String) dataObj, Map.class);
+
+                        if (result != null) {
+                            if (result.get("analysis") != null) question.setKnowledge(result.get("analysis").toString());
+                            if (result.get("answer") != null) question.setAnswer(result.get("answer").toString());
+                            if (result.get("points") != null) question.setAnalysis(result.get("points").toString());
+                            if (result.get("topic") != null) question.setTopic(result.get("topic").toString());
+                            viewQuestionService.save(question);
+                        }
+
+                        return ResponseEntity.ok(result != null ? result : Collections.emptyMap());
+
+                    } catch (Exception e) {
+                        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                                .body(Collections.singletonMap("error", "解析 data 失败：" + e.getMessage()));
+                    }
+                }else if (dataObj instanceof Map) {
+                    @SuppressWarnings("unchecked")
+                    Map<String, Object> result = (Map<String, Object>) dataObj;
+
+                    if (result != null) {
+                        if (result.get("analysis") != null) question.setKnowledge(result.get("analysis").toString());
+                        if (result.get("answer") != null) question.setAnswer(result.get("answer").toString());
+                        if (result.get("points") != null) question.setAnalysis(result.get("points").toString());
+                        if (result.get("topic") != null) question.setTopic(result.get("topic").toString());
+                        viewQuestionService.save(question);
+                    }
+
+                    return ResponseEntity.ok(result != null ? result : Collections.emptyMap());
+                } else {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                            .body(Collections.singletonMap("error", "data 格式不支持"));
+                }
+            }
+
+            return  ResponseEntity.ok().build();
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonMap("error", e.getMessage()));
         }
     }
 }
